IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
11/13/08: Made Tilt able to project a model built on a tomogram onto all the
images used to build the tomogram.

11/13/08: In Imodinfo, added a computation of volume inside a mesh, renamed
"mesh volume" to "contour volume", and made it omit the "cylinder" values
if the mesh-based values exist.

11/11/08: IMOD_3-12-21
11/11/08: Fixed problem with bead fixer when prealigned stack loaded binned.

11/11/08: In Etomo fixed a problem with Final Aligned Stack dialog's binning
value, and a problem with Trial tomogram.

11/10/08: The new aligned stack panel was split into tabs for each operation.

11/7/08: Isosurface now keeps a separate threshold for each time (volume).

11/7/08: Fixed the zap subarea coordinates after dragging a rubber band.

11/7/08: Added ctfcorrection log and mtffilter options to the Etomo Final
Aligned Stack dialog's right-click menu.

11/6/08: Fixed autocontrast of reference slice in Midas in reference mode.

11/6/08: Fixed bug in 3dmod float that froze program.

11/2/08: Etomo now supplies tilt angles to Midas for fixing coarse alignment
to allow cosine stretching, but the cosine stretch is initially turned off.

11/2/08: Added options to Tilt to allow incremental reconstructions to be
computed, adding or subtracting selected views.

11/2/08: Added option to Xfproduct to multiply by just one of the transforms
in a file of multiple transforms.

11/2/08: Added option to Newstack to overwrite sections in existing output
file. 

10/29/08: Tomogram generation panel was split into two, one for aligned stack
and one for tomogram.  CTF correction interface added to aligned stack panel.

10/20/08: The CTFfiles option to copytomocoms was changed to specify whether
to copy one file or both.

10/17/08: IMOD_3-12-20
10/16/08: Changed Copytomocoms to produce com files for CTF correction, with
options to set common parameters.
