@@ -26,6 +26,10 @@ LIST FUNCTIONS FROM samplemeansd.c
 LIST FUNCTIONS FROM cubinterp.c
 <H3 style="color: rgb(0,128,0);">Binning Function</H3>
 LIST FUNCTIONS FROM reduce_by_binning.c
+<H3 style="color: rgb(0,128,0);">Histogram Functions</H3>
+LIST FUNCTIONS FROM histogram.c
+<H3 style="color: rgb(0,128,0);">Simple Statistical Functions</H3>
+LIST FUNCTIONS FROM simplestat.c
 <H3 style="color: rgb(0,128,0);">Color Map Functions</H3>
 LIST FUNCTIONS FROM colormap.c
 LIST CODE FROM colormap.c COLORRAMP
@@ -52,6 +56,10 @@ DESCRIBE FUNCTIONS FROM samplemeansd.c
 DESCRIBE FUNCTIONS FROM cubinterp.c
 <H3 style="color: rgb(0,128,0);">Binning Function</H3>
 DESCRIBE FUNCTIONS FROM reduce_by_binning.c
+<H3 style="color: rgb(0,128,0);">Histogram Functions</H3>
+DESCRIBE FUNCTIONS FROM histogram.c
+<H3 style="color: rgb(0,128,0);">Simple Statistical Functions</H3>
+DESCRIBE FUNCTIONS FROM simplestat.c
 <H3 style="color: rgb(0,128,0);">Color Map Functions</H3>
 DESCRIBE FUNCTIONS FROM colormap.c
 DESCRIBE CODE FROM colormap.c COLORRAMP
